src/scss/styles.scss
$brand-primary: #212F3D;
$brand-green: #B4FF00;
$brand-orange: #FF6D00;

$font-size-base: 16.7px;
$line-height-base: 1.377245509; // 23/16.7

$font-family-sans-serif: "PT Sans", Helvetica, Arial, sans-serif;
$font-family-monospace: "PT Mono", Menlo, Monaco, Consolas, "Courier New", monospace;

$screen-xl-min: 1400px;

@import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
@import "mixins";
@import "cover";
@import "affix";

html, body {
  height: 100%;
}

body { position: relative; }

.logo, h1, h2, h3, h4, h5, h6, strong, b { color: $brand-primary; }

.logo {
  padding: 15px 0;
  font-family: "Rock Salt", $font-family-sans-serif;
}

h2.logo {
  font-size: 1.6em;
  @include size-min(lg) { font-size: 2em; }
}

hr {
  width: 98%;
  border-top-color: $brand-primary;
}

.strong-title { padding-right: 10px; }

.nav li.active a {
  margin-left: -5px;
  border-left: 5px solid $brand-orange;
}

.nav li:not(.active) a:hover {
  margin-left: -5px;
  border-left: 5px solid lighten($brand-orange, 15%);
}

.col-content {
  z-index: -1;

  & > div:first-child {
    &:before {
      margin-top: -$affixed-header-height;
      height: $affixed-header-height;
    }

    h3 { margin-top: 8px; }
  }

  & > div:before {
    display: block;
    content: " ";
    margin-top: -($affixed-header-height - 11);
    height: $affixed-header-height - 11;
    visibility: hidden;
  }
}

/*
 *
 * Animation Helpers
 * --------------------------------------------------
 */
@for $i from 1 through 10 {
  .animation-delay-#{$i}s {
    animation-delay: #{$i}s;
  }
}

